added bg and about me, fixed bugs

--- a/art.html
+++ b/art.html
@@ -40,8 +40,8 @@
              <li class="nav-item">
                <a class="nav-link" href="art.html">Digital Art</a>
              </li>
-             <li class="nav-item">
-               <a class="nav-link" href="https://meeting-jinx.kocho">Indie Game</a>
+             <!-- <li class="nav-item">
+               <a class="nav-link" href="https://meeting-jinx.kocho">Indie Game</a> -->
              </li>
                </ul>
              </li>
