--- a/index.html
+++ b/index.html
@@ -9,24 +9,21 @@
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="styles.css" />
+    /> 
+    <link href="style.css" rel="stylesheet" type="text/css" />
     <title>Portfolio</title>
   </head>
-  
-  
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
          <div class="container-fluid"> 
-            <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src = "logo.png"/></a>
+                    <img src = "art/logo.png"></a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <li><a class="dropdown-item" href="#">SidRat Games</a></li>
                   <li><a class="dropdown-item" href="https://podcasts.sidratgames.repl.co">Dispatched from the forest</a></li>
                   <li><a class="dropdown-item" href="https://TreasureHounds.sidratgames.repl.co">Treasure Hounds</a></li>
                 </ul></li>
-          <a class="navbar-brand" href="https://drum.io/sidratgames">Tim Huser</a>
+          <a class="navbar-brand" href="https://www.linkedin.com/in/sidrat/">Tim Huser</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -38,18 +35,24 @@
               <li class="nav-item">
                 <a class="nav-link" href="art.html">Digital Art</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="https://meeting-jinx.kocho">Indie Game</a>
-              </li>
+              </li> -->
                 </ul>
               </li>
             </ul>
           </div>
         </div>
       </nav>
-
+      <div class="wrapper" height:80%;">
+      <p>
+        I am an Indie Game Developer. A number of months ago I started Sid Rat Games. That is actually how I started in coding. After some time I realized that while building my game I was actually coding in Python. I am well versed in Python. I’d say it is my language of choice. Beyond that I work with HTML5, CSS+, and Java. I have used both the GitHub, and WordPress platforms to publish websites. I possess an old school work ethic and take pride in things I create. If given the opportunity I will not quit at my task(s) until they are completed to perfection.
+        As a child, one of my favorite toys was a six wheel “computer car”. There were arrow buttons on top of it. The play was to enter directions and time travel then go. In hindsight I was doing basic programming as a toddler, writing and executing a basic code. That was my favorite toy for years. To be honest, I wasn’t the best student in High School. However, computer class was my jam. At the time we were taught DOS. The strict method of writing the code was exactly what my mind needed.
+        I have a deeply instilled passion for coding, and will be contuing to learn new languages as they admerge
+        
+</p>
+  </div>
   </body>
-  <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script><div class="badge-base LI-profile-badge" data-locale="en_US" data-size="small" data-theme="dark" data-type="VERTICAL" data-vanity="sid-rat" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/sid-rat?trk=profile-badge"></a></div>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
