added Jinx walkthrough

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                   <li><a class="dropdown-item" href="#">SidRat Games</a></li>
                   <li><a class="dropdown-item" href="https://podcasts.sidratgames.repl.co">Dispatched from the forest</a></li>
                   <li><a class="dropdown-item" href="https://TreasureHounds.sidratgames.repl.co">Treasure Hounds</a></li>
+                  <li><a class="dropdown-item" href="https://GreenStar.sidratgames.repl.co">GreenStar Families</a></li>
+                  <li><a class="dropdown-item" href="https://main.mcmad.repl.co">McMad</a></li>
                 </ul></li>
           <a class="navbar-brand" href="https://www.linkedin.com/in/sidrat/">Tim Huser</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,9 +37,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="art.html">Digital Art</a>
               </li>
-              <!-- <li class="nav-item">
-                <a class="nav-link" href="https://meeting-jinx.kocho">Indie Game</a>
-              </li> -->
+              <li class="nav-item">
+                <a class="nav-link" href="game.html">Indie Game</a>
+              </li>
                 </ul>
               </li>
             </ul>
