--- a/game.html
+++ b/game.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Portfolio</title>
+    <title>Game</title>
   </head>
   
   
@@ -25,7 +25,7 @@
             <li><a class="dropdown-item" href="https://podcasts.sidratgames.repl.co">Dispatched from the forest</a></li>
             <li><a class="dropdown-item" href="https://TreasureHounds.sidratgames.repl.co">Treasure Hounds</a></li>
             </ul></li>
-         <a class="navbar-brand" href="https://drum.io/sidratgames">Tim Huser</a>
+         <a class="navbar-brand" href="https://www.linkedin.com/in/sidrat/">Tim Huser</a>
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
            <span class="navbar-toggler-icon"></span>
          </button>
@@ -39,8 +39,8 @@
              <li class="nav-item">
                <a class="nav-link" href="art.html">Digital Art</a>
              </li>
-             <!-- <li class="nav-item">
-               <a class="nav-link" href="https://meeting-jinx.kocho">Indie Game</a> -->
+              <li class="nav-item">
+               <a class="nav-link" href="https://meeting-jinx.kocho">Indie Game</a>
              </li>
                </ul>
              </li>
@@ -48,10 +48,14 @@
          </div>
        </div>
      </nav>
-     <div class="wrapper" height:80%;">
-        <iframe style="width: 100%; height: 500px; overflow: hidden; border:0px;" src="jinxWalkthrough.mp4" width="100" height="100" scrolling="no">Iframes not supported</iframe>
-  </div>
-      </div>
+     <div class="wrapper">
+        <h1>"Jinx AI" walk through, intro</h1>
+        <iframe style="width: 100%; height: 500px; overflow: hidden; border:0px;" 
+        src="jinxWalkthrough.mp4" 
+        width="100" 
+        height="100" 
+        scrolling="no">Iframes not supported</iframe>
+  
       <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
