--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     <img src = "art/logo.png"></a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="#">SidRat Games</a></li>
+                  <!-- <li><a class="dropdown-item" href="#">SidRat Games</a></li> -->
                   <li><a class="dropdown-item" href="https://podcasts.sidratgames.repl.co">Dispatched from the forest</a></li>
                   <li><a class="dropdown-item" href="https://TreasureHounds.sidratgames.repl.co">Treasure Hounds</a></li>
                   <li><a class="dropdown-item" href="https://GreenStar.sidratgames.repl.co">GreenStar Families</a></li>
