--- a/wkHistory.html
+++ b/wkHistory.html
@@ -17,37 +17,40 @@
   
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid"> 
-            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <img src = "art/logo.png"/></a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item" href="#">SidRat Games</a></li>
-            <li><a class="dropdown-item" href="https://podcasts.sidratgames.repl.co">Dispatched from the forest</a></li>
-            <li><a class="dropdown-item" href="https://TreasureHounds.sidratgames.repl.co">Treasure Hounds</a></li>
-            </ul></li>
-         <a class="navbar-brand" href="https://drum.io/sidratgames">Tim Huser</a>
-         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-           <span class="navbar-toggler-icon"></span>
-         </button>
-         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-           <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link active" href="index.html">Home</a>
-             <li class="nav-item">
-               <a class="nav-link" href="https://www.facebook.com/Sidrat-Web-Design-113584011121468">Facebook</a>
-             </li>
-             <li class="nav-item">
-               <a class="nav-link" href="art.html">Digital Art</a>
-             </li>
-             <!-- <li class="nav-item">
-               <a class="nav-link" href="https://meeting-jinx.kocho">Indie Game</a> -->
-             </li>
-               </ul>
-             </li>
-           </ul>
-         </div>
+      <div class="container-fluid"> 
+             <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                 <img src = "art/logo.png"></a>
+                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+               <!-- <li><a class="dropdown-item" href="#">SidRat Games</a></li> -->
+               <li><a class="dropdown-item" href="https://podcasts.sidratgames.repl.co">Dispatched from the forest</a></li>
+               <li><a class="dropdown-item" href="https://TreasureHounds.sidratgames.repl.co">Treasure Hounds</a></li>
+               <li><a class="dropdown-item" href="https://GreenStar.sidratgames.repl.co">GreenStar Families</a></li>
+               <li><a class="dropdown-item" href="https://main.mcmad.repl.co">McMad</a></li>
+             </ul></li>
+       <a class="navbar-brand" href="https://www.linkedin.com/in/sidrat/">Tim Huser</a>
+       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+       </button>
+       <div class="collapse navbar-collapse" id="navbarNavDropdown">
+         <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.linkedin.com/in/sidrat/"><img src="art/linkedin.png">  Linkedin</a>
+          </li>
+           <li class="nav-item">
+             <a class="nav-link" href="https://www.facebook.com/Sidrat-Web-Design-113584011121468"><img src="art/fbLogo.png"/>  Facebook</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="game.html"><img src="art/jinxLogo.png">  Indie Game</a>
+           </li>
+           <li class="nav-item">
+            <a class="nav-link" href="art.html">Digital Art</a>
+          </li>
+             </ul>
+           </li>
+         </ul>
        </div>
-     </nav>
+     </div>
+   </nav>
      <div class="wrapper" height:80%;">
         <h1>Under Construction</h1>
       </div>
