--- a/game.html
+++ b/game.html
@@ -34,16 +34,19 @@
        <div class="collapse navbar-collapse" id="navbarNavDropdown">
          <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="https://www.linkedin.com/in/sidrat/"><img src="art/linkedin.png">  Linkedin</a>
+            <a class="nav-link" href="index.html"><b>Home</b></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.linkedin.com/in/sidrat/"><img src="art/linkedin.png"/></a>
           </li>
            <li class="nav-item">
-             <a class="nav-link" href="https://www.facebook.com/Sidrat-Web-Design-113584011121468"><img src="art/fbLogo.png"/>  Facebook</a>
+             <a class="nav-link" href="https://www.facebook.com/Sidrat-Web-Design-113584011121468"><img src="art/fbLogo.png"/></a>
            </li>
            <li class="nav-item">
-             <a class="nav-link" href="game.html"><img src="art/jinxLogo.png">  Indie Game</a>
+            <a class="nav-link" href="mailto:SidRatGames@protonmail.com?Subject=Protential Job" target="_top"><img src="art/email.jpg"></a>
            </li>
            <li class="nav-item">
-            <a class="nav-link" href="art.html">Digital Art</a>
+            <a class="nav-link" href="art.html"><img src="art/artThumb.png"/></a>
           </li>
              </ul>
            </li>
