--- a/index.html
+++ b/index.html
@@ -15,37 +15,43 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-         <div class="container-fluid"> 
-                <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src = "art/logo.png"></a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <!-- <li><a class="dropdown-item" href="#">SidRat Games</a></li> -->
-                  <li><a class="dropdown-item" href="https://podcasts.sidratgames.repl.co">Dispatched from the forest</a></li>
-                  <li><a class="dropdown-item" href="https://TreasureHounds.sidratgames.repl.co">Treasure Hounds</a></li>
-                  <li><a class="dropdown-item" href="https://GreenStar.sidratgames.repl.co">GreenStar Families</a></li>
-                  <li><a class="dropdown-item" href="https://main.mcmad.repl.co">McMad</a></li>
-                </ul></li>
-          <a class="navbar-brand" href="https://www.linkedin.com/in/sidrat/">Tim Huser</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="https://www.facebook.com/Sidrat-Web-Design-113584011121468">Facebook</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="art.html">Digital Art</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="game.html">Indie Game</a>
-              </li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+      <div class="container-fluid"> 
+             <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                 <img src = "art/logo.png"></a>
+                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+               <!-- <li><a class="dropdown-item" href="#">SidRat Games</a></li> -->
+               <li><a class="dropdown-item" href="https://podcasts.sidratgames.repl.co">Dispatched from the forest</a></li>
+               <li><a class="dropdown-item" href="https://TreasureHounds.sidratgames.repl.co">Treasure Hounds</a></li>
+               <li><a class="dropdown-item" href="https://GreenStar.sidratgames.repl.co">GreenStar Families</a></li>
+               <li><a class="dropdown-item" href="https://main.mcmad.repl.co">McMad</a></li>
+             </ul></li>
+       <a class="navbar-brand" href="https://www.linkedin.com/in/sidrat/">Tim Huser</a>
+       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+       </button>
+       <div class="collapse navbar-collapse" id="navbarNavDropdown">
+         <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.linkedin.com/in/sidrat/"><img src="art/linkedin.png"/></a>
+          </li>
+           <li class="nav-item">
+             <a class="nav-link" href="https://www.facebook.com/Sidrat-Web-Design-113584011121468"><img src="art/fbLogo.png"/></a>
+           </li>
+           <li class="nav-item">
+            <a class="nav-link" href="mailto:SidRatGames@protonmail.com?Subject=Protential Job" target="_top"><img src="art/email.jpg"></a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="game.html"><img src="art/jinxLogo.png"/></a>
+           </li>
+           <li class="nav-item">
+            <a class="nav-link" href="art.html"><img src="art/artThumb.png"/></a>
+          </li>
+             </ul>
+           </li>
+         </ul>
+       </div>
+     </div>
+   </nav>
       <div class="wrapper" height:80%;">
       <p>
         I am an Indie Game Developer.</br>
