--- a/wkHistory.html
+++ b/wkHistory.html
@@ -34,16 +34,22 @@
        <div class="collapse navbar-collapse" id="navbarNavDropdown">
          <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="https://www.linkedin.com/in/sidrat/"><img src="art/linkedin.png">  Linkedin</a>
+            <a class="nav-link" href="index.html"><b>Home</b></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.linkedin.com/in/sidrat/"><img src="art/linkedin.png"/></a>
           </li>
            <li class="nav-item">
-             <a class="nav-link" href="https://www.facebook.com/Sidrat-Web-Design-113584011121468"><img src="art/fbLogo.png"/>  Facebook</a>
+             <a class="nav-link" href="https://www.facebook.com/Sidrat-Web-Design-113584011121468"><img src="art/fbLogo.png"/></a>
            </li>
            <li class="nav-item">
-             <a class="nav-link" href="game.html"><img src="art/jinxLogo.png">  Indie Game</a>
+            <a class="nav-link" href="mailto:SidRatGames@protonmail.com?Subject=Protential Job" target="_top"><img src="art/email.jpg"></a>
            </li>
            <li class="nav-item">
-            <a class="nav-link" href="art.html">Digital Art</a>
+             <a class="nav-link" href="game.html"><img src="art/jinxLogo.png"/></a>
+           </li>
+           <li class="nav-item">
+            <a class="nav-link" href="art.html"><img src="art/artThumb.png"/></a>
           </li>
              </ul>
            </li>
@@ -52,7 +58,16 @@
      </div>
    </nav>
      <div class="wrapper" height:80%;">
-        <h1>Under Construction</h1>
+        <h1>My Origan Story</h1>
+        <h3>For a detailed work history please see my <a href="https://www.linkedin.com/in/sidrat/">Linkedin page</a> </h3>
+        <hr></br>
+        <p>I grew up in a restaurant family. So, I unofficially have been working since I could stand.</br>
+    I officially joined the workforce my senior year of high school. My father was on disability so I got a full time job cooking at the local tourist stop, the Essenhause. I had to clock in before school was out so I worked out an early release agreement with the principal.
+    I cooked in, and managed a couple of restaurants until I got married and started a family.</br></br>
+    It was then that I felt like I should have a career, so I went to school for a CDL. I was an over the road truck driver for almost ten years, and yes, I did manage to be home enough to start that family. My daughter was born in '01, and I was home to see her birth. About a year later I got a job hauling equipment for an excavating company so I could be home with my family. Unfortunately all that home time lead to my divorce. After a rough couple of years with alcohol I sobered up and bought my family business.</br></br>
+    I took the advise of my accountant and started the umbrella company Maple Leaf Ventures. Under that umbrella I mainly owned and operated the County Seat Cafe. After just shy of ten years I got an offer to sell, and took it.<br>
+    That lead to my job working the night shift at Polywood. I liked the job, and I liked the night shift, but the factory life got to be too much for me. Through my hobby of gaming and digital character design I discoverd a passion for coding. I was about a quarter of the way through my first game when I discovered I was quite good at coding in <b>Python</b>. That leads me to, hopefully, the last chapter of a long and eventful work experiences.</p>
+    <p>In early 2021 I started my business SidRat Games and began building websites for local business. After several months of ramon noodles and peanut butter and jelly sandwiches I decided to enroll at <a href="https://elevenfifty.org">Eleven Fifty Academy.</a>I have learned a great deal to support my self taught knowledge of code. Most importantly I have learned coding structure and industry standards. I have a thirst for code in general, and whatever path I choose, I will always be learning new ways to develope software.   </p>
       </div>
       <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
