filled out work history  and fixed some link bugs

--- a/wkHistory.html
+++ b/wkHistory.html
@@ -59,7 +59,7 @@
    </nav>
      <div class="wrapper" height:80%;">
         <h1>My Origan Story</h1>
-        <h3>For a detailed work history please see my <a href="https://www.linkedin.com/in/sidrat/">Linkedin page</a> </h3>
+        <h3>For a detailed work history: <a href="https://my.indeed.com/p/timothyh-lu6fgms"></br> <img src="art/resume.png"></a> </h3>
         <hr></br>
         <p>I grew up in a restaurant family. So, I unofficially have been working since I could stand.</br>
     I officially joined the workforce my senior year of high school. My father was on disability so I got a full time job cooking at the local tourist stop, the Essenhause. I had to clock in before school was out so I worked out an early release agreement with the principal.
