--- a/art.html
+++ b/art.html
@@ -63,6 +63,9 @@
             <img src="art/ghost.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
+            <img src="art/gamer.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
             <img src="art/Jinx.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
