--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                <li><a class="dropdown-item" href="https://GreenStar.sidratgames.repl.co">GreenStar Families</a></li>
                <li><a class="dropdown-item" href="https://main.mcmad.repl.co">McMad</a></li>
              </ul></li>
-       <a class="navbar-brand" href="https://www.linkedin.com/in/sidrat/">Tim Huser</a>
+       <a class="navbar-brand" href="https://drum.io/sidratgames/">Tim Huser</a>
        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
        </button>
@@ -38,7 +38,7 @@
              <a class="nav-link" href="https://www.facebook.com/Sidrat-Web-Design-113584011121468"><img src="art/fbLogo.png"/></a>
            </li>
            <li class="nav-item">
-            <a class="nav-link" href="mailto:SidRatGames@protonmail.com?Subject=Protential Job" target="_top"><img src="art/email.jpg"></a>
+            <a class="nav-link" href="contact.html" target="_top"><img src="art/email.jpg"></a>
            </li>
            <li class="nav-item">
              <a class="nav-link" href="game.html"><img src="art/jinxLogo.png"/></a>
@@ -54,9 +54,10 @@
    </nav>
       <div class="wrapper" height:80%;">
       <p>
-        I am an Indie Game Developer.</br>
+        <h1>I am an Indie Game Developer</h1></br>
         At the beginning of 2021, I started Sid Rat Games. That is actually how I started in coding. After some time I realized that while building my game I was actually coding in Python. I am well versed in Python. I’d say it is my language of choice. Beyond that I work with HTML5, CSS+, and JavaScript. I have used both the GitHub, and WordPress platforms to publish websites. I possess an old school work ethic and take pride in things I create. If given the opportunity I will not quit at my task(s) until they are completed to perfection.
-      </br>
+      <hr></br>
+      <img class="me" src = "art/me.jpg">
       <hr> As a child, one of my favorite toys was a six wheel “computer car”. There were arrow buttons on top of it. The play was to enter directions and time travel then go. In hindsight I was doing basic programming as a toddler, writing and executing a basic code. That was my favorite toy for years. To be honest, I wasn’t the best student in High School. However, computer class was my jam. At the time we were taught DOS. The strict method of writing the code was exactly what my mind needed.
         I have a deeply instilled passion for coding. That is why I'm currently taking an Eleven Fifty boot camp, and will be continuing to learn new languages as they emerge.
         </p>
