--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                <li><a class="dropdown-item" href="https://GreenStar.sidratgames.repl.co">GreenStar Families</a></li>
                <li><a class="dropdown-item" href="https://main.mcmad.repl.co">McMad</a></li>
              </ul></li>
-       <a class="navbar-brand" href="https://drum.io/sidratgames/">Tim Huser</a>
+       <a class="navbar-brand" href="https://drum.io/sidratgames/">"Doc"</a>
        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
        </button>
