--- a/art.html
+++ b/art.html
@@ -59,7 +59,7 @@
                 <img src="art/gamer.jpg" alt="...">
 			</div>
 			<div class="slide">
-                <img src="art/ghost.jpg" alt="...">
+                <img src="art/ghost.jpg" href="https://sidratgames.com/products/canvas-prints-premium-stretched-canvas" alt="...">
 			</div>
             <div class="slide">
                 <img src="art/Jinx.jpg" alt="...">
