--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid"> 
              <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                 <img src = "art/logo.png"></a>
+                 <h1>Projects</h1></a>
                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                <!-- <li><a class="dropdown-item" href="#">SidRat Games</a></li> -->
                <li><a class="dropdown-item" href="https://podcasts.sidratgames.repl.co">Dispatched from the forest</a></li>
@@ -24,7 +24,7 @@
                <li><a class="dropdown-item" href="https://GreenStar.sidratgames.repl.co">GreenStar Families</a></li>
                <li><a class="dropdown-item" href="https://main.mcmad.repl.co">McMad</a></li>
              </ul></li>
-       <a class="navbar-brand" href="https://drum.io/sidratgames/">"Doc"</a>
+       <!-- <a class="navbar-brand" href="https://drum.io/sidratgames/">"Doc"</a> -->
        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
        </button>
