--- a/wkHistory.html
+++ b/wkHistory.html
@@ -16,60 +16,31 @@
   
   
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid"> 
-             <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                 <img src = "art/logo.png"></a>
-                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-               <!-- <li><a class="dropdown-item" href="#">SidRat Games</a></li> -->
-               <li><a class="dropdown-item" href="https://podcasts.sidratgames.repl.co">Dispatched from the forest</a></li>
-               <li><a class="dropdown-item" href="https://TreasureHounds.sidratgames.repl.co">Treasure Hounds</a></li>
-               <li><a class="dropdown-item" href="https://GreenStar.sidratgames.repl.co">GreenStar Families</a></li>
-               <li><a class="dropdown-item" href="https://main.mcmad.repl.co">McMad</a></li>
-             </ul></li>
-       <a class="navbar-brand" href="https://drum.io/sidratgames/">"Doc"</a>
-       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-         <span class="navbar-toggler-icon"></span>
-       </button>
-       <div class="collapse navbar-collapse" id="navbarNavDropdown">
-         <ul class="navbar-nav">
+      <ul class="nav nav-pills nav-fill">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="contact.html" target="_top"><img src="art/email.jpg">  Contact Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://www.linkedin.com/in/sidrat/"><img src="art/linkedin.png"/>My Linkedin</a>
+              <a class="nav-link" href="game.html"><img src="art/jinxLogo.png" />  Choice based game</a>
           </li>
-           <li class="nav-item">
-             <a class="nav-link" href="https://www.facebook.com/Sidrat-Web-Design-113584011121468"><img src="art/fbLogo.png"/>My Facebook</a>
-           </li>
-           <li class="nav-item">
-            <a class="nav-link" href="contact.html" target="_top"><img src="art/email.jpg">Contact Me</a>
-           </li>
-           <li class="nav-item">
-             <a class="nav-link" href="game.html"><img src="art/jinxLogo.png"/>Choice based game</a>
-           </li>
-           <li class="nav-item">
-            <a class="nav-link" href="dazArt.html"><img src="art/artThumb.png"/>My Daz3D characters</a>
+          <li class="nav-item">
+              <a class="nav-link" href="dazArt.html"><img src="art/artThumb.png" />  My Daz3D characters</a>
           </li>
-             </ul>
-           </li>
-         </ul>
-       </div>
-     </div>
-   </nav>
-     <div class="wrapper" height:80%;">
-        <h2>My Origan Story</h2>
-        <h3>For a detailed work history: <a href="https://my.indeed.com/p/timothyh-lu6fgms"></br> <img src="art/resume.png"></a> </h3>
-        <hr></br>
-        <p>I grew up in a restaurant family. So, I unofficially have been working since I could stand.</p>
-        <p>I officially joined the workforce my senior year of high school when I began cooking full-time at the local tourist stop, Das Dutchman Essenhaus. I needed to start my shift before the school day was over so I worked out an agreement with the school principal to depart early. I then cooked in and managed a few restaurants until I got married.
-        </p><p>After I got married, I obtained my Commercial Driver’s License and was an over-the-road truck driver for almost ten years. Once my daughter was born, I worked for an excavating company to be home more with my family. But the restaurant business was in my blood, so I eventually bought and ran the family café in my hometown – the County Seat Café. The restaurant business is very challenging so when I received an offer to sell after ten years I took it!
-        </p><p>That led to my job working the night shift at Polywood, a company that manufactures furniture from landfill-bound and ocean-bound plastics. I liked the job, and I liked the night shift, but the factory life got to be too much for me. Through my hobby of gaming and digital character design I discovered a passion for coding. I was about a quarter of the way through my first game when I realized I was quite good at coding in Python. That leads me to, hopefully, the last chapter of long and eventful work experiences.
-        </p><p>In early 2021, I started my business SidRat Games, and began building websites for local businesses. After several months of ramen noodles and peanut butter and jelly sandwiches, I decided to enroll at <a href= "https://www.elevenfifty.org">Eleven Fifty Academy.</a> I have learned a great deal to augment my self-taught coding knowledge. Most importantly, I have learned coding structure and industry standards. I have a thirst for code in general and, whatever path I choose, I will always be learning new ways to develop software.</p>
+      </ul>
+      <div class="wrapper" height:80%;">
+          <h2>My Origan Story</h2>
+          <h3>For a detailed work history: <a href="https://my.indeed.com/p/timothyh-lu6fgms"></br> <img src="art/resume.png"></a> </h3>
+          <hr></br>
+          <p>I grew up in a restaurant family. So, I unofficially have been working since I could stand.</p>
+          <p>
+              I officially joined the workforce my senior year of high school when I began cooking full-time at the local tourist stop, Das Dutchman Essenhaus. I needed to start my shift before the school day was over so I worked out an agreement with the school principal to depart early. I then cooked in and managed a few restaurants until I got married.
+          </p><p>
+              After I got married, I obtained my Commercial Driver’s License and was an over-the-road truck driver for almost ten years. Once my daughter was born, I worked for an excavating company to be home more with my family. But the restaurant business was in my blood, so I eventually bought and ran the family café in my hometown – the County Seat Café. The restaurant business is very challenging so when I received an offer to sell after ten years I took it!
+          </p><p>
+              That led to my job working the night shift at Polywood, a company that manufactures furniture from landfill-bound and ocean-bound plastics. I liked the job, and I liked the night shift, but the factory life got to be too much for me. Through my hobby of gaming and digital character design I discovered a passion for coding. I was about a quarter of the way through my first game when I realized I was quite good at coding in Python. That leads me to, hopefully, the last chapter of long and eventful work experiences.
+          </p><p>In early 2021, I started my business SidRat Games, and began building websites for local businesses. After several months of ramen noodles and peanut butter and jelly sandwiches, I decided to enroll at <a href="https://www.elevenfifty.org">Eleven Fifty Academy.</a> I have learned a great deal to augment my self-taught coding knowledge. Most importantly, I have learned coding structure and industry standards. I have a thirst for code in general and, whatever path I choose, I will always be learning new ways to develop software.</p>
       </div>
-      <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"
-  ></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+              integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+              crossorigin="anonymous"></script>
 </html>
